# maestro-pizza-maker

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
data/: README
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  project_description.rst
maestro_pizza_maker/: __init__.py  ingredients.py  pizza.py  pizza_greeks.py  pizza_menu.py  pizza_optimizer.py  pizza_sensitivities.py  taste_at_risk.py  test_pizza.py  teste_at_risk.py
maestro_pizza_maker/sand_box/: fat_generator.py
notebooks/: README  menu_analysis.ipynb  test.ipynb
tests/: conftest.py  test_empty.py
